--- a/main.html
+++ b/main.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-<div id="text"></div>
-
-
+<div id="text">Welcome to Accio Jobs!</div>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
